@@ -696,6 +696,8 @@ public class NumberAxis extends ValueAxis implements Cloneable, Serializable {
     public static TickUnitSource createStandardTickUnits() {
 
         TickUnits units = new TickUnits();
+        DecimalFormat df000 = new DecimalFormat("0.0000000000");
+        DecimalFormat df00 = new DecimalFormat("0.000000000");
         DecimalFormat df0 = new DecimalFormat("0.00000000");
         DecimalFormat df1 = new DecimalFormat("0.0000000");
         DecimalFormat df2 = new DecimalFormat("0.000000");
@@ -710,6 +712,8 @@ public class NumberAxis extends ValueAxis implements Cloneable, Serializable {
 
         // we can add the units in any order, the TickUnits collection will
         // sort them...
+        units.add(new NumberTickUnit(0.000000001, df00, 2));
+        units.add(new NumberTickUnit(0.00000001, df0, 2));
         units.add(new NumberTickUnit(0.0000001, df1, 2));
         units.add(new NumberTickUnit(0.000001, df2, 2));
         units.add(new NumberTickUnit(0.00001, df3, 2));
@@ -730,6 +734,8 @@ public class NumberAxis extends ValueAxis implements Cloneable, Serializable {
         units.add(new NumberTickUnit(10000000000.0, df10, 2));
         units.add(new NumberTickUnit(100000000000.0, df10, 2));
 
+        units.add(new NumberTickUnit(0.0000000025, df000, 5));
+        units.add(new NumberTickUnit(0.000000025, df00, 5));
         units.add(new NumberTickUnit(0.00000025, df0, 5));
         units.add(new NumberTickUnit(0.0000025, df1, 5));
         units.add(new NumberTickUnit(0.000025, df2, 5));
@@ -750,6 +756,8 @@ public class NumberAxis extends ValueAxis implements Cloneable, Serializable {
         units.add(new NumberTickUnit(25000000000.0, df10, 5));
         units.add(new NumberTickUnit(250000000000.0, df10, 5));
 
+        units.add(new NumberTickUnit(0.000000005, df00, 5));
+        units.add(new NumberTickUnit(0.00000005, df0, 5));
         units.add(new NumberTickUnit(0.0000005, df1, 5));
         units.add(new NumberTickUnit(0.000005, df2, 5));
         units.add(new NumberTickUnit(0.00005, df3, 5));
